<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/general">
        <EditTextPreference
            android:key="ussd_code"
            android:defaultValue="@string/ussd_code_default"
            android:title="@string/ussd_code" />
        <ListPreference
            android:key="subscription_id"
            android:title="@string/subscription_id"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:key="periodic_checks"
            android:defaultValue="false"
            android:title="@string/periodic_checks_title" />
        <Preference
            android:key="clear_data"
            android:title="@string/clear_current_data"
            android:summary="@string/clear_current_data_summary" />
        <SwitchPreferenceCompat
            android:key="no_duplicates"
            android:defaultValue="true"
            android:title="@string/duplicates" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications">
        <SwitchPreferenceCompat
            android:key="notify_balance_increased"
            android:defaultValue="false"
            android:title="@string/notify_balance_increased_title" />
        <SwitchPreferenceCompat
            android:key="notify_balance_under_threshold"
            android:defaultValue="true"
            android:title="@string/notify_balance_under_threshold_title" />
        <EditTextPreference
            android:key="notify_balance_under_threshold_value"
            android:dependency="notify_balance_under_threshold"
            android:title="@string/notify_balance_under_threshold_value_title"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            android:defaultValue="1.00" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/debug">
        <Preference
            android:key="provider_codes"
            android:title="@string/debug_provider_details" />
        <Preference
            android:key="last_ussd_response"
            android:title="@string/debug_last_ussd_response"
            android:defaultValue="@string/debug_last_ussd_response_none" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>
</PreferenceScreen>